--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "info project",
   "main": "app.js",
   "scripts": {
-    "start":"node app.js",
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +19,10 @@
   "homepage": "https://github.com/MegaGnarly/INFO30005#readme",
   "dependencies": {
     "express": "^4.17.3",
-    "express-handlebars": "^6.0.5"
+    "express-handlebars": "^6.0.5",
+    "mongoose": "^6.2.11"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.0"
   }
 }
