--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.3",
     "express-handlebars": "^6.0.5",
+    "handlebars": "^4.7.7",
     "mongoose": "^6.3.0"
   },
   "devDependencies": {
