--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/MegaGnarly/INFO30005#readme",
   "dependencies": {
+    "body-parser": "^1.20.0",
     "express": "^4.17.3",
     "express-handlebars": "^6.0.5",
     "handlebars": "^4.7.7",
